--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		
 		<meta name="description" content="Présentation sur les tests unitaires avec reveal.js">
 		<meta name="author" content="Jimmy RUNDSTADLER">
-		<title>MoSCoW</title>
+		<title>Les Tests Unitaires</title>
 
 		<link rel="stylesheet" href="reveal/css/reset.css">
 		<link rel="stylesheet" href="reveal/css/reveal.css">
