--- a/index.html
+++ b/index.html
@@ -93,19 +93,48 @@
 							Dans la pyramide ci-dessous, la base est la moins couteuse à mettre en place et a le retour le plus rapide, le sommet est le plus couteux, mais le plus proche de l'expérience utilisateur.
 						</small>
 					</p>
+					<img src="./img/pyramide.png" width="50%"/>
 				</section>
 
-
+				<section>
+					<h3>Quand tester ?</h3>
+					<p>
+						Il y a 2 approches majeures :
+						<small>
+							<ul>
+								<li class="fragment fade-in-then-semi-out">Le Test Last Development (TLD) aussi connu sous le nom de Test-After</li>
+								<li class="fragment fade-in-then-semi-out">Le Test Driven Development (TDD)</li>
+							</ul>
+						</small>
+					</p>
+				</section>
+				<section>
+					<h3>Principes du TLD</h3>
+					<p>
+						Sans surprise, pour le TLD, le but est d'écrire les tests après le développement. C'est l'approche la plus répandue, notamment pour le code ayant beaucoup d'historique (legacy code) et pour lequel aucun ou très peu de tests sont présents.
+					</p>
+				</section>
+				<section>
+					<h3>Principes du TDD</h3>
+					<p>
+						A l'inverse du TLD, l'approche TDD veut que les tests s'écrivent systématiquement avant le développement.<br />
+						Voici les "lois" du TDD :
+						<small>
+							<ul>
+								<li class="fragment fade-in-then-semi-out">Vous devez écrire un test qui échoue avant de pouvoir écrire le code de production correspondant.</li>
+								<li class="fragment fade-in-then-semi-out">Vous devez écrire une seule assertion à la fois, qui fait échouer le test ou qui échoue à la compilation.</li>
+								<li class="fragment fade-in-then-semi-out">Vous devez écrire le minimum de code de production pour que l'assertion du test actuellement en échec soit satisfaite.</li>
+							</ul>
+						</small>
+					</p>
+				</section>
+				<section>
+					<h3>TDD vs TLD</h3>
+					TODOOOOOO
+				</section>
 
 <!--
-				// Quoi tester ?
-					// Pyramide des tests
 				// Quand tester ?
-					// Test Driven Development (TDD) vs Test Last Development (TLD aka Test-After)
-					// Principe du TLD
-					// Principe du TDD
-						// Etapes
-						// Loi
 					// Pro / Con
 						// Temps requis
 						// Courbe d'apprentissage
